@@ -48,6 +48,7 @@ You can find further documentation files at [docs.rescuethemes.com/](docs.rescue
 * Updated default gallery display
 * Updated comments style
 * Fixed footer copyright setting
+* Added link to home page post dates
 
 = 1.0 - Sep 10, 2015 =
 * Initial release
